--- a/index-nojs.html
+++ b/index-nojs.html
@@ -8,8 +8,8 @@
   <title>Polycarp's Portfolio</title>
 </head>
 <body>
-<section id="menu-wrapper">
-    <div>
+<section id="menu-wrapper" class="display-none">
+    <div class="menu-layer container">
       <button>
         <svg id="menu-close" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
@@ -18,31 +18,40 @@
         </svg>
       </button>
       <ul>
-        <li><a href="#projects-section">Portfolio</a></li>
-        <li><a href="#about-section">About</a></li>
-        <li><a href="#contact-section">Contact</a></li>
+        <li class="menu-link"><a href="#projects-section">Portfolio</a></li>
+        <li class="menu-link"><a href="#about-section">About</a></li>
+        <li class="menu-link"><a href="#contact-section">Contact</a></li>
       </ul>
     </div>
   </section>
 <main>
-  <header>
-    <div>
-      <!-- Logo and name -->
-    </div>
-    <nav>
-      <ul>
-        <!-- Navigation links will go here -->
-      </ul>
-    </nav>
-  </header>
- <section id="hero-section">
-  <div></div>
-  <div></div>
-  <div>
-    <h1>Hi, I'm [insert name]<br><span>Web Developer & Designer</span></h1>
-    <p>I craft modern, responsive websites and web apps that blend creativity with code. Let's build something amazing together—explore my work or get in touch to start your project!</p>
-    <button type="button">Let's Connect</button>
+ <header class="header-container position-fixed">
+  <div class="logo">
+    <span></span>
+    <a href="">[Polycarp Irungu]</a>
+  </div>
+  <nav class="nav-wrapper">
     <ul>
+      <li class="nav-link"><a href="#projects-section">Portfolio</a></li>
+      <li class="nav-link"><a href="#about-section">About</a></li>
+      <li class="nav-link"><a href="#contact-section">Contact</a></li>
+      <li class="menu">
+        <svg id="hamburger-menu" width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M0 1C0 0.447715 0 1 0H17C17.5523 0 18 0.447715 18 1C18 1.55228 17.5523 2 17 2H1C0.447715 2 0 1.55228 0 1ZM0 6C0 5.44772 0.447715 5 1 5L17 5C17.5523 5 18 5.44772 18 6C18 6.55229 17.5523 7 17 7L1 7C0.447715 7 0 6.55228 0 6ZM1 10C0.447715 10 0 10.4477 0 11C0 11.5523 0.447715 12 1 12H17C17.5523 12 18 11.5523 18 11C18 10.4477 17.5523 10 17 10H1Z"
+            fill="#d7c6bc" />
+        </svg>
+      </li>
+    </ul>
+  </nav>
+</header>
+ <section id="hero-section" class="hero-wrapper">
+  <div class="hero-wrapper-bg"></div>
+  <div class="hero-container">
+    <h1>Hi, I'm Polycarp Irungu<br><span>Web Developer & Designer</span></h1>
+    <p class="hero-desc">I craft modern, responsive websites and web apps that blend creativity with code. Let's build something amazing together—explore my work or get in touch to start your project!</p>
+    <button type="button" class="hero-cta">Let's Connect</button>
+    <ul class="social">
       <li>
         <a href="">
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,23 +88,24 @@
     </ul>
   </div>
 </section>
- <section id="projects-section">
-  <div>
-    <a href="https://www.codekenya.org/about-us" target="_blank">
-      <img src="assets/img/projects/codekenya.png" alt="Code Kenya" />
-    </a>
-  </div>
-  <div>
-    <h2>Code Kenya</h2>
-    <ul>
-      <li>Code Kenya</li>
-      <li>
+ <section id="projects-section" class="projects-wrapper section-margin-t">
+  <div class="project-container container">
+    <div class="project-snapshot">
+      <a href="https://www.codekenya.org/about-us" target="_blank">
+        <img src="assets/img/projects/codekenya.png" alt="Code Kenya" />
+      </a>
+    </div>
+    <div class="project-content">
+      <h2>Code Kenya</h2>
+      <ul class="project-details">
+        <li class="client-name">Code Kenya</li>
+        <li class="role">
           <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="4" cy="4" r="4" fill="#C1C7D0" />
           </svg>
           Web Dev
         </li>
-        <li>
+         <li class="yearlb">
           <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="4" cy="4" r="4" fill="#C1C7D0" />
           </svg>
@@ -109,11 +119,11 @@
         <li>css</li>
         <li>javascript</li>
       </ul>
-      <button type="button">see project</button>
+       <button type="button" class="btn">see project</button>
     </div>
   </div>
   <div>
-    <div>
+    <div >
       <a href="https://www.usaprospectsagent.com/" target="_blank">
         <img src="assets/img/projects/usapp.png" alt="Usa Prospects Agent" />
       </a>
@@ -145,16 +155,13 @@
     </div>
   </div>
 </section>
-  <section id="about-section">
-  <div>
-    <div>
-      <h1>About<br>
-        Myself</h1>
-      <p>Hello I'm a software developer! I can help you build a product , feature or website Look through some of my work and
-        experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
-      <button type="button">let's connect</button>
-      <ul>
-        <li>
+  <section id="about-section" class="about-wrapper section-margin-t">
+  <div class="about-container container">
+    <div class="about-info">
+      <h1 class="intro-text">About<br>Myself</h1>
+      <p>Hello I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+      <button type="button" class="call-to-action">let's connect</button>
+      <ul class="social">
           <a href="">
             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -188,13 +195,11 @@
           </a>
         </li>
       </ul>
-      <button type="button">
-        Get my resume
-      </button>
+      <button type="button" class="btn">Get my resume</button>
     </div>
-      <div>
-      <ul>
-        <li>languages</li>
+    <div class="about-technologies">
+      <ul class="tools-title">
+        <li class="title">languages</li>
         <li>
           <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -203,7 +208,7 @@
           </svg>
         </li>
       </ul>
-      <ul>
+       <ul class="lang-list">
         <li>
           <img src="assets/img/lang/js.png" alt="JavaScript">
           JavaScript
@@ -218,8 +223,8 @@
         </li>
       </ul>
       
-      <ul>
-        <li>Frameworks</li>
+      <ul class="tools-title b-bottom">
+        <li class="title">Frameworks</li>
         <li>
           <svg width="8" height="15" viewBox="0 0 8 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -229,8 +234,8 @@
         </li>
       </ul>
       
-      <ul>
-        <li>Skills</li>
+      <ul class="tools-title b-bottom">
+        <li class="title">Skills</li>
         <li>
           <svg width="8" height="15" viewBox="0 0 8 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -242,22 +247,22 @@
     </div>
   </div>
 </section>
-  <footer id="contact-section">
-    <div>
-  <h1>Contact me</h1>
-  <p>
-    If you have an application you are interested in developing,
-    a feature that you need built or a project that needs
-    coding. I'd love to help with it
-  </p>
-  <form action="https://formspree.io/f/mgedddej" method="post">
-    <input name="name" type="text" placeholder="Your name" maxlength="30" required>
-    <input name="email" type="email" placeholder="Your email address" required>
-    <textarea name="message" placeholder="Write your message here" maxlength="500" required></textarea>
-    <div>
-      <button type="submit" value="Submit">Get In Touch</button>
-    </div>
-  </form>  
+  <footer id="contact-section" class="contact-wrapper">
+  <div class="contact-container">
+    <h1 class="intro-text">Contact me</h1>
+    <p>
+      If you have an application you are interested in developing,
+      a feature that you need built or a project that needs
+      coding. I'd love to help with it
+    </p>
+    <form id="form" action="https://formspree.io/f/[insert your id from formspree.io]" method="post">
+      <input name="name" id="text" type="text" placeholder="Your name" maxlength="30" required>
+      <input name="email" id="email" type="email" placeholder="Your email address" required>
+      <textarea name="message" id="message" placeholder="Write your message here" maxlength="500" required></textarea>
+      <div class="button-wrapper">
+        <button type="submit" value="Submit" class="btn">Get In Touch</button>
+      </div>
+    </form>
   </div>
 </footer>
 </main>
