Fix layout and remove horizontal scroll

--- a/index-nojs.html
+++ b/index-nojs.html
@@ -28,7 +28,7 @@
  <header class="header-container position-fixed">
   <div class="logo">
     <span></span>
-    <a href="">[Polycarp Irungu]</a>
+    <a href="">Polycarp Irungu</a>
   </div>
   <nav class="nav-wrapper">
     <ul>
@@ -123,21 +123,23 @@
     </div>
   </div>
   <div>
-    <div >
+    <div class="project-container container">
+     <div class="project-snapshot">
       <a href="https://www.usaprospectsagent.com/" target="_blank">
         <img src="assets/img/projects/usapp.png" alt="Usa Prospects Agent" />
       </a>
     </div>
-      <div>
+      <div class="project-content">
       <h2>Usa Prospects Agent</h2>
-      <ul>
-        <li>
+      <ul class="project-details">
+        <li class="client-name">Usa prospects program</li>
+        <li class="role">
           <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="4" cy="4" r="4" fill="#C1C7D0" />
           </svg>
           Full Stack Dev
         </li>
-        <li>
+        <li class="yearlb">
           <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="4" cy="4" r="4" fill="#C1C7D0" />
           </svg>
@@ -145,7 +147,7 @@
         </li>
       </ul>
       <p>Integarating AI Workflows to automate tasks like college essay review, answer questions on the entire US college application process, and more.</p>
-      <ul>
+      <ul class="technologies-used">
         <li>html</li>
         <li>Ruby on rails</li>
         <li>css</li>
