added js to my portfolio

--- a/javascript-practice.html
+++ b/javascript-practice.html
@@ -3,14 +3,50 @@
   <head>
     <meta charset="UTF-8">
     <title>My First JavaScript Page</title>
+    
   </head>
   <body>
-    <h1>Hello, JavaScript!</h1>
-     <!-- <script> -->
-      // This is your first JavaScript code!
-      console.log('The page is loaded!');
-    <!-- </script -->
-     <script src="./practice-script.js"></script>
+   <body>
+    <body>
+  <img class="nice" src="https://picsum.photos/500" alt="Placeholder image" />
+  <body>
+  <img class="nice cool" src="https://picsum.photos/500" alt="Placeholder image" />
+  
+    <h1>
+  My Dynamic Portfolio!
+  <span class="hidden-text"> (Secret Message!)</span>
+</h1>
+    <p>This is a paragraph about my portfolio projects.</p>
+
+    <div class="project-item">
+      <h2>Project Alpha</h2>
+      <img src="./assets/img/projects/codekenya.png" alt="CodeKenya Project">
+      <p>A web application for learning code.</p>
+    </div>
+
+    <div class="skill-item">
+      <h2>Frontend Skills</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+
+    <div class="project-item" id="portfolio-project-beta">
+      <h2>Project Beta</h2>
+      <img src="./assets/img/projects/usapp.png" alt="USApp Project">
+      <p>A mobile app for community engagement.</p>
+    </div>
+    <article class="item">
+  <h2>My Portfolio Article</h2>
+  <p class="pizza">This is how many pizzas I ate! 🍕</p>
+</article>
+
+
+    <script src="./practice-script.js"></script>
+  
+     
 
 </body>
 </html>
